I have not made proper commits - so here is one without a proper commit message

--- a/html/about.html
+++ b/html/about.html
@@ -15,15 +15,32 @@
                <button class="nav-button"><a href="portfolio.html">Code</a></button>
                <button class="nav-button"><a href="for_fun.html">For Fun!</a></button>
             </nav>
-            <h2>Charlotte Adams</h2>
+            <h2 class="main-nav-h2">`All Things ${Charlotte}!`</h2>
             <h3>Who is she?</h3>
-         </div>
+            <section class="flex-container">
+               <div>
+                  <img src="../images/capricorn.JPG">
+               </div>
+               <div>
+                  <!-- <img src=> -->
+               </div>
+               <div>
+                  <img src="../images/substantial-char.JPG">
+               </div> 
+            
+            </section>
          <section class="bio">
             <p>Charlotte (she/her) earns herself a reputation as being a woman of integrity, perseverance and grit. She has a growth mindset, knowing her qualities are achieved through her efforts. Her tech career path is non-traditional - she is mostly an autodidact. Her resilience showcases her strengths: collaboration, communication and adaptability.</p>
             <p>Charlotte believes her teammates’ success is at the heart of her own. She integrates well onto teams, effectively interacts with peers and management and then builds and maintains those relationships. Charlotte has honed the skill of working remotely - with precision time management and accountability - she shines in this area. She consistently shows up prepared - willing to do the hard work. Charlotte is teachable, embraces challenges, respects diversity and values professional criticism.</p>
             <p>Charlotte is a skilled communicator. This is evident in 1:1 situations, in group settings and through documentation. When she doesn't understand something, she does not shy away from asking questions. Even when she feels like ‘she should already know this’ - she asks anyway. She is becoming an effective author of design documents and writes clearly and concisely in Slack.</p>
             <p>Charlotte is flexible with short-term alterations and adaptable to long-term changes. She has an eye for detail without losing sight of the overall goal. To date she has worked on three development teams. Whether she starts a project from the beginning or gets added partway through, she quickly finds her place and begins dialog with those folks whom her work will directly impact. She takes pride in who she is both professionally and personally. All of this combined with her love for coding and helping folks with real world concerns makes Charlotte an asset to your team - an asset to your company.</p>
          </section>
+        
+
+      </div>
+      <div class="footer">
+         <p>&copy; 2020 Charlotte Adams</p>
+         <p>This website is <b><i>seriously</i></b> under construction!</p>
       </div>
    </body>
 </html>
