--- a/html/index.html
+++ b/html/index.html
@@ -15,14 +15,22 @@
                <button class="nav-button"><a href="portfolio.html">Code</a></button>
                <button class="nav-button"><a href="for_fun.html">For Fun!</a></button>
             </nav>
-            <h2>Charlotte Adams</h2>
-            <h3>A Can-do, Clever & Creative Coder</h3>
+            <div>
+               <h2 class="main-nav-h2">Charlotte Adams</h2>
+            </div>
+            <div>
+               <h3>A Can-do, Clever & Creative Coder</h3>
+            </div>
          </div>
          <div class="left">
-            <img src="../images/face_of_tech_words.png" alt="blue, pink, white & yellow logo for Ada Developers Academy">
+            <h3 class="column-h3">Currently:</h3>
+
+            <img src="../images/face_of_tech_words.png" class="ada-logo" alt="blue, pink, white & yellow logo for Ada Developers Academy">
          </div>
          <div class="middle">
-            <h3>Aspirations:</h3>
+           
+               <h3 class="column-h3">Future Aspirations:</h3>
+           
             <ul>
             <li>Contribute to solving real world concerns.</li>
             <li>Positively affect folks through technology.</li>
@@ -31,10 +39,13 @@
             <ul>
          </div>
          <div class="right">
+            <h3 class="column-h3">Previously:</h3>
+
             <img src="../images/golden-school-of-hard-knocks.png" class="hard-knocks" alt="Gold and black school logo">
          </div>
          <div class="footer">
-            <p>Website creation in progress...</p>
+            <p>&copy; 2020 Charlotte Adams</p>
+            <p>This website is <b><i>seriously</i></b> under construction!</p>
          </div>
       </div>
    </body>
