--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -15,7 +15,7 @@
                <button class="nav-button"><a href="about.html">About</a></button>
                <button class="nav-button"><a href="for_fun.html">For Fun!</a></button>
             </nav>
-            <h2 class="header-title">All Things Coding!</h2>
+            <h2 class="header-title">`All Things ${Coding}!`</h2>
          </div>
       </div>
       <div class="timeline">
@@ -34,7 +34,7 @@
          <div class="container right">
             <div class="content">
                <h2>2019</h2>
-               <p>Software Engineering Intern:</p>
+               <p>Software Developer Apprenticeships:</p>
                <div class="internship-logos">
                   <a href="https://shadowinc.io/" rel="">
                   <img src="../images/shadow-inc-logo.jpg" alt="yellow/white/brown logo" />
@@ -49,36 +49,41 @@
             </div>
          </div>
       </div>
+      <div class="timeline">
+         <div class="container left">
+            <div class="content">
+               <h2>2018 - 2019</h2>
+               <p>Github: Javascript & React</p>
+               <a href="https://github.com/charlotte-adams" rel="">
+               <img src="../images/github_PNG40.png" alt="" />
+               </a>
+            </div>
+         </div>
+         <div class="container right">
+            <div class="content">
+               <h2>2017</h2>
+               <p></p>
+            </div>
+         </div>
+      </div>
+      <div class="timeline">
+         <div class="container left">
+            <div class="content">
+               <h2>2016</h2>
+               <p></p>
+            </div>
+         </div>
+         <div class="container right">
+            <div class="content">
+               <h2>2015</h2>
+               <p></p>
+            </div>
+         </div>
+      </div>
+      <div class="footer">
+         <p>&copy; 2020 Charlotte Adams</p>
+         <p>This website is <b><i>seriously</i></b> under construction!</p>
+      </div>
+
    </body>
 </html>
-<div class="timeline">
-   <div class="container left">
-      <div class="content">
-         <h2>2018</h2>
-         <p>Github: Javascript & React</p>
-         <a href="https://github.com/charlotte-adams" rel="">
-         <img src="../images/github_PNG40.png" alt="" />
-         </a>
-      </div>
-   </div>
-   <div class="container right">
-      <div class="content">
-         <h2>2017</h2>
-         <p></p>
-      </div>
-   </div>
-</div>
-<div class="timeline">
-   <div class="container left">
-      <div class="content">
-         <h2>2016</h2>
-         <p></p>
-      </div>
-   </div>
-   <div class="container right">
-      <div class="content">
-         <h2>2015</h2>
-         <p></p>
-      </div>
-   </div>
-</div>
